<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="#CDC6AE"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/firstNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/op_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/op_type"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/secondNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </LinearLayout>

        <Button
            android:id="@+id/gen_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="#F57B51"
            android:text="@string/generar_numeros"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/firstOperations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#EE6352"
                android:text="@string/add"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/sust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#59CD90"
                android:text="@string/sust"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3FA7D6"
                android:text="@string/c"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondOperations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FAC05E"
                android:text="@string/mult"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#F79D84"
                android:text="@string/div"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <Button
            android:id="@+id/par"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#86D331"
            android:text="@string/par"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/primo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="#4D7BFF"
            android:text="@string/primo"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B8149D"
            android:gravity="center"
            android:text="@string/resultado"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#47036F"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/es"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B8149D"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>